deleted routing *html from dispatcherservlet mapping